Add support for Xilinx Kria KR260 (Mali)
Add support for Xilinx Kria KR260 (Mali):
-
Automatic fallback to ARGB8888 because XRGB8888 is not supported (or is it?): !1756 (closed) or !2519 (merged) -
Disable modifiers when not supported: !2359 (merged) or 690b8806 (already in 42.1) -
Fix Xwayland startup failures causing mutter to hang indefinitely (without --no-x11
): patched in Ubuntu, upstream fix pending -
Stop filling the log with Realizing HW cursor failed: Failed to allocate gbm_bo: Invalid argument
: !2520 (merged) -
Mipmaps (anti-aliasing) of window previews and wallpaper are corrupt in the overview: !2593 (closed)!2614 (merged) -
Desktop freezes when display resolution is changed: !2596 (merged) -
Triple buffering (!1441) is sometimes tearing: won't fix in mutter
Edited by Daniel van Vugt