renderer-native: Fall back to ARGB if XRGB is not supported

This fixes mutter failing to start on some ARM/Mali boards.

Related: https://gitlab.gnome.org/GNOME/mutter/-/issues/2354
Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/2519>

(cherry picked from commit 7c8ffe7efebaf9a962484132a7dbfb4ce086c15a)